<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pid</name>
  <version>0.0.0</version>
  <description>Unofficial ROS 2 PID node</description>
  <maintainer email="juulbloemers@hotmail.com">Juul Bloemers</maintainer>
  <maintainer email="larsbloemers@gmail.com">Lars Bloemers</maintainer>
  <license>TODO: License declaration</license>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
